--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="./css/responsive.css" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -39,6 +45,27 @@
             </label>
           </nav>
           <!-- nav-bar end -->
+          <!-- hero section start -->
+          <div class="hero-section">
+            <div class="hero-content">
+              <h1 class="hero-title">
+                Navigating the digital landscape for success
+              </h1>
+              <p class="hero-p">
+                Our digital marketing agency helps businesses grow and succeed
+                online through a range of services including SEO, PPC, social
+                media marketing, and content creation.
+              </p>
+              <button class="hero-btn">Book a consultation</button>
+            </div>
+            <div class="hero-img">
+              <img
+                src="./assets/images/banar-illustration.png"
+                alt="Banar Illustration"
+              />
+            </div>
+          </div>
+          <!-- hero section end -->
         </header>
       </div>
     </div>
