company logos  section  and services section  design complited

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Positivus</title>
-    <!-- <link rel="shortcut icon" href="./assets/images/footer-logo.png" type="image/x-icon"> -->
-    <!-- External CSS -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="./css/responsive.css" />
@@ -21,6 +19,7 @@
   <body>
     <div class="wrapper">
       <div class="container">
+        <!-- header  -->
         <header>
           <!-- nav-bar start -->
           <nav class="nav-bar">
@@ -30,7 +29,7 @@
             <input type="checkbox" name="check" id="check" />
 
             <ul class="menu">
-              <li><a href="#">About us</a></li>
+              <li><a href="#about">About us</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#use-cases">Use Cases</a></li>
               <li><a href="#pricing">Pricing</a></li>
@@ -51,6 +50,12 @@
               <h1 class="hero-title">
                 Navigating the digital landscape for success
               </h1>
+              <div class="hero-img illustration">
+                <img
+                  src="./assets/images/banar-illustration.png"
+                  alt="Banar Illustration"
+                />
+              </div>
               <p class="hero-p">
                 Our digital marketing agency helps businesses grow and succeed
                 online through a range of services including SEO, PPC, social
@@ -58,7 +63,7 @@
               </p>
               <button class="hero-btn">Book a consultation</button>
             </div>
-            <div class="hero-img">
+            <div class="hero-img illustration-1">
               <img
                 src="./assets/images/banar-illustration.png"
                 alt="Banar Illustration"
@@ -67,6 +72,160 @@
           </div>
           <!-- hero section end -->
         </header>
+        <!-- main  -->
+        <main>
+          <!-- company section start -->
+          <section class="company-logos-section">
+            <div class="company-logos">
+              <img
+                src="./assets/images/company-logo-1.png"
+                alt="company-logo-1"
+              />
+              <img
+                src="./assets/images/company-logo-2.png"
+                alt="company-logo-2"
+              />
+              <img
+                src="./assets/images/company-logo-3.png"
+                alt="company-logo-3"
+              />
+              <img
+                src="./assets/images/company-logo-4.png"
+                alt="company-logo-4"
+              />
+              <img
+                src="./assets/images/company-logo-5.png"
+                alt="company-logo-5"
+              />
+              <img
+                src="./assets/images/company-logo-6.png"
+                alt="company-logo-6"
+              />
+            </div>
+          </section>
+          <!-- company section end -->
+          <!-- services section start -->
+          <section class="services-section" id="services">
+            <div class="service-header">
+              <h2 class="service-title">Services</h2>
+              <p class="service-p">
+                At our digital marketing agency, we offer a range of services to
+                help businesses grow and succeed online. These services include:
+              </p>
+            </div>
+            <div class="service-content">
+              <div class="service-card s-card-1">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Search engine</h3>
+                    <h3 class="service-card-title">optimization</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-search-engine.png"
+                    alt="search engine image"
+                  />
+                </div>
+              </div>
+              <div class="service-card s-card-2">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Pay-per-click</h3>
+                    <h3 class="service-card-title">advertising</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-pay-per-click.png"
+                    alt="pay-per-click image"
+                  />
+                </div>
+              </div>
+              <div class="service-card s-card-3">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Social Media</h3>
+                    <h3 class="service-card-title">Marketing</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-social-media.png"
+                    alt="sSocial Media image"
+                  />
+                </div>
+              </div>
+              <div class="service-card s-card-4">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Email</h3>
+                    <h3 class="service-card-title">Marketing</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-email.png"
+                    alt="Email Marketing image"
+                  />
+                </div>
+              </div>
+              <div class="service-card s-card-5">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Content</h3>
+                    <h3 class="service-card-title">Creation</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-content-creation.png"
+                    alt="content creation image"
+                  />
+                </div>
+              </div>
+              <div class="service-card s-card-6">
+                <div class="service-card-content">
+                  <div class="service-card-title">
+                    <h3 class="service-card-title">Analytics and</h3>
+                    <h3 class="service-card-title">Tracking</h3>
+                  </div>
+                  <div class="learn-more">
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <button>Learn More</button>
+                  </div>
+                </div>
+                <div class="service-card-img">
+                  <img
+                    src="./assets/images/services-img-analytics.png"
+                    alt="Analytics  image"
+                  />
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- services section end -->
+        </main>
       </div>
     </div>
   </body>
