Proposal section design completed

--- a/index.html
+++ b/index.html
@@ -225,6 +225,25 @@
             </div>
           </section>
           <!-- services section end -->
+          <!-- proposal section start -->
+          <section class="proposal-section">
+            <div class="proposal-content">
+              <h2 class="proposal-title">Let’s make things happen</h2>
+              <p class="proposal-p">
+                Contact us today to learn more about how our digital marketing
+                services can help your business grow and succeed online.
+              </p>
+
+              <button class="proposal-btn">Get your free proposal</button>
+            </div>
+            <div class="proposal-img">
+              <img
+                src="./assets/images/booking-section-image.png"
+                alt="Proposal image"
+              />
+            </div>
+          </section>
+          <!-- proposal section end -->
         </main>
       </div>
     </div>
