case study section design completed

--- a/index.html
+++ b/index.html
@@ -244,6 +244,52 @@
             </div>
           </section>
           <!-- proposal section end -->
+          <!--  case study section start -->
+          <section class="case-study-section">
+            <div class="service-header case-study-header">
+              <h2 class="service-title case-study-title">Case Studies</h2>
+              <p class="service-p case-study-p">
+                Explore Real-Life Examples of Our Proven Digital Marketing
+                Success through Our Case Studies
+              </p>
+            </div>
+            <div class="case-study-content">
+              <div class="case-study-card cs-card-1">
+                <p>
+                  For a local restaurant, we implemented a targeted PPC campaign
+                  that resulted in a 50% increase in website traffic and a 25%
+                  increase in sales.
+                </p>
+                <button>
+                  Learn more
+                  <i class="fa-solid fa-arrow-up learn-more-icon"></i>
+                </button>
+              </div>
+              <div class="case-study-card cs-card-2">
+                <p>
+                  For a B2B software company, we developed an SEO strategy that
+                  resulted in a first page ranking for key keywords and a 200%
+                  increase in organic traffic.
+                </p>
+                <button>
+                  Learn more
+                  <i class="fa-solid fa-arrow-up learn-more-icon"></i>
+                </button>
+              </div>
+              <div class="case-study-card cs-card-3">
+                <p>
+                  For a national retail chain, we created a social media
+                  marketing campaign that increased followers by 25% and
+                  generated a 20% increase in online sales.
+                </p>
+                <button>
+                  Learn more
+                  <i class="fa-solid fa-arrow-up learn-more-icon"></i>
+                </button>
+              </div>
+            </div>
+          </section>
+          <!-- case study section end -->
         </main>
       </div>
     </div>
