Our working section design completed

--- a/index.html
+++ b/index.html
@@ -290,6 +290,97 @@
             </div>
           </section>
           <!-- case study section end -->
+          <!-- our working section start -->
+          <section class="working-section">
+            <div class="service-header working-header">
+              <h2 class="service-title working-title">Our Working Process</h2>
+              <p class="service-p working-p">
+                Step-by-Step Guide to Achieving Your Business Goals
+              </p>
+            </div>
+            <div class="working-content">
+              <div class="wc-card-1">
+                <div class="working-card-header wc-text-1">
+                  <div class="wc-header-text">
+                    <h2>01</h2>
+                    <h3 class="working-card-title">Consultation</h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-minus"></i>
+                  </div>
+                </div>
+
+                <p class="working-card-p">
+                  During the initial consultation, we will discuss your business
+                  goals and objectives, target audience, and current marketing
+                  efforts. This will allow us to understand your needs and
+                  tailor our services to best fit your requirements.
+                </p>
+              </div>
+              <div class="working-card wc-card-2">
+                <div class="working-card-header">
+                  <div class="wc-header-text">
+                    <h2>02</h2>
+                    <h3 class="working-card-title">
+                      Research and Strategy Development
+                    </h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-plus"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="working-card wc-card-3">
+                <div class="working-card-header">
+                  <div class="wc-header-text">
+                    <h2>03</h2>
+                    <h3 class="working-card-title">Implementation</h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-plus"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="working-card wc-card-4">
+                <div class="working-card-header">
+                  <div class="wc-header-text">
+                    <h2>04</h2>
+                    <h3 class="working-card-title">
+                      Monitoring and Optimization
+                    </h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-plus"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="working-card wc-card-5">
+                <div class="working-card-header">
+                  <div class="wc-header-text">
+                    <h2>05</h2>
+                    <h3 class="working-card-title">
+                      Reporting and Communication
+                    </h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-plus"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="working-card wc-card-6">
+                <div class="working-card-header">
+                  <div class="wc-header-text">
+                    <h2>06</h2>
+                    <h3 class="working-card-title">Continual Improvement</h3>
+                  </div>
+                  <div class="wc-header-icon">
+                    <i class="fa-solid fa-plus"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- our working section end -->
         </main>
       </div>
     </div>
