team section design completed

--- a/index.html
+++ b/index.html
@@ -381,6 +381,162 @@
             </div>
           </section>
           <!-- our working section end -->
+          <!-- team section start -->
+          <section class="team-section">
+            <div class="service-header team-header">
+              <h2 class="service-title team-title">Team</h2>
+              <p class="service-p team-p">
+                Meet the skilled and experienced team behind our successful
+                digital marketing strategies
+              </p>
+            </div>
+            <div class="team-content">
+              <div class="team-card team-1">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-1.svg"
+                    alt="team-1"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">John Smith</h3>
+                    <p class="team-card-p">CEO and Founder</p>
+                  </div>
+                  <div class="team-icon">
+                    <!-- <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i> -->
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    10+ years of experience in digital marketing. Expertise in
+                    SEO, PPC, and content strategy
+                  </p>
+                </div>
+              </div>
+              <div class="team-card team-2">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-2.svg"
+                    alt="team-2"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">John Doe</h3>
+                    <p class="team-card-p">Director of Marketing</p>
+                  </div>
+                  <div class="team-icon">
+                    <i class="fa-brands fa-twitter"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    7+ years of experience in project management and team
+                    leadership. Strong organizational and communication skills
+                  </p>
+                </div>
+              </div>
+              <div class="team-card team-3">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-3.svg"
+                    alt="team-3"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">Michael Brown</h3>
+                    <p class="team-card-p">Product Manager</p>
+                  </div>
+                  <div class="team-icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    5+ years of experience in SEO and content creation.
+                    Proficient in keyword research and on-page optimization
+                  </p>
+                </div>
+              </div>
+              <div class="team-card team-4">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-3.svg"
+                    alt="team-4"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">Emily Johnson</h3>
+                    <p class="team-card-p">PPC Manager</p>
+                  </div>
+                  <div class="team-icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    3+ years of experience in paid search advertising. Skilled
+                    in campaign management and performance analysis
+                  </p>
+                </div>
+              </div>
+              <div class="team-card team-5">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-1.svg"
+                    alt="team-5"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">Brian Williams</h3>
+                    <p class="team-card-p">Social Media Manager</p>
+                  </div>
+                  <div class="team-icon">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    4+ years of experience in social media marketing. Proficient
+                    in creating and scheduling content, analyzing metrics, and
+                    building engagement
+                  </p>
+                </div>
+              </div>
+              <div class="team-card team-6">
+                <div class="team-card-content">
+                  <img
+                    src="./assets/images/team-image-2.svg"
+                    alt="team-6"
+                    class="team-img"
+                    loading="lazy"
+                  />
+                  <div class="">
+                    <h3 class="team-card-title">Sarah Kim</h3>
+                    <p class="team-card-p">SEO Expert</p>
+                  </div>
+                  <div class="team-icon">
+                    <i class="fa-brands fa-twitter"></i>
+                  </div>
+                </div>
+                <div class="team-card-text">
+                  <p>
+                    2+ years of experience in writing and editing Skilled in
+                    creating compelling, SEO-optimized content for various
+                    industries
+                  </p>
+                </div>
+              </div>
+            </div>
+            <button class="team-btn">See all team</button>
+          </section>
+          <!-- team section end -->
         </main>
       </div>
     </div>
