--- a/index.html
+++ b/index.html
@@ -537,6 +537,49 @@
             <button class="team-btn">See all team</button>
           </section>
           <!-- team section end -->
+          <!-- testimonial section start -->
+          <section class="testimonials-section">
+            <div class="testimonials">
+              <div class="service-header testimonials-header">
+                <h2 class="service-title testimonials-title">Testimonials</h2>
+                <p class="service-p testimonials-p">
+                  Hear from Our Satisfied Clients: Read Our Testimonials to
+                  Learn More about Our Digital Marketing Services
+                </p>
+              </div>
+              <div class="testimonials-content">
+                <div class="testimonials-card">
+                  <span class="testimonials-name">John Smith</span>
+                  <span class="testimonials-position"
+                    >Marketing Director at XYZ Corporation</span
+                  >
+                  <span class="tooltip-text"
+                    >"We have been working with Positivus for the past year and
+                    have seen a significant increase in website traffic and
+                    leads as a result of their efforts. The team is
+                    professional, responsive, and truly cares about the success
+                    of our business. We highly recommend Positivus to any
+                    company looking to grow their online presence."</span
+                  >
+                </div>
+                <div class="testimonials-card">
+                  <span class="testimonials-name">John Smith</span>
+                  <span class="testimonials-position"
+                    >Marketing Director at XYZ Corporation</span
+                  >
+                  <span class="tooltip-text"
+                    >"We have been working with Positivus for the past year and
+                    have seen a significant increase in website traffic and
+                    leads as a result of their efforts. The team is
+                    professional, responsive, and truly cares about the success
+                    of our business. We highly recommend Positivus to any
+                    company looking to grow their online presence."</span
+                  >
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- testimonial section end -->
         </main>
       </div>
     </div>
