contact section design completed

--- a/index.html
+++ b/index.html
@@ -580,6 +580,63 @@
             </div>
           </section>
           <!-- testimonial section end -->
+          <!-- contact section start -->
+          <section class="contact-section">
+            <div class="contact">
+              <div class="service-header contact-header">
+                <h2 class="service-title contact-title">Contact Us</h2>
+                <p class="service-p contact-p">
+                  Connect with Us: Let's Discuss Your Digital Marketing Needs
+                </p>
+              </div>
+              <div class="contact-content">
+                <form action="" class="contact-form">
+                  <div class="rediobutton">
+                  <div class="say-hi">
+                    <input
+                    type="radio"
+                    name="radio"
+                    id="radio"
+                    value="Say Hi!"
+                  />
+                  <label for="radio">Say Hi!</label>
+                  </div>
+                    <div class="get-qute">
+                      <input
+                      type="radio"
+                      name="radio"
+                      id="radio1"
+                      value="Get a Quote"
+                    />
+                    <label for="radio">Get a Quote</label>
+                    </div>
+
+                  </div>
+                  <div class="user-name">
+                    <label for="name"> Name</label>
+                  <input type="text" placeholder="Name" name="name" id="name"/>
+                  </div>
+                  <div class="user-email">
+                    <label for="email">Email</label>
+                  <input type="email" placeholder="Email" name="email" id="email" />
+                  </div>
+                  <div class="user-message">
+                    <label for="message">Message</label>
+                    <textarea
+                      name="message"
+                      id="message"
+                      cols="30"
+                      rows="10"
+                      placeholder="Message"
+                    ></textarea>
+                  </div>
+                  <button class="contact-btn">Send Message</button>
+                </form>
+                </div>
+              </div>
+              </section>
+              <!-- contact section end -->
+
         </main>
       </div>
     </div>
