footer section design completed

--- a/index.html
+++ b/index.html
@@ -404,8 +404,6 @@
                     <p class="team-card-p">CEO and Founder</p>
                   </div>
                   <div class="team-icon">
-                    <!-- <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i> -->
                     <i class="fa-brands fa-linkedin-in"></i>
                   </div>
                 </div>
@@ -592,33 +590,42 @@
               <div class="contact-content">
                 <form action="" class="contact-form">
                   <div class="rediobutton">
-                  <div class="say-hi">
-                    <input
-                    type="radio"
-                    name="radio"
-                    id="radio"
-                    value="Say Hi!"
-                  />
-                  <label for="radio">Say Hi!</label>
-                  </div>
+                    <div class="say-hi">
+                      <input
+                        type="radio"
+                        name="radio"
+                        id="radio"
+                        value="Say Hi!"
+                      />
+                      <label for="radio">Say Hi!</label>
+                    </div>
                     <div class="get-qute">
                       <input
-                      type="radio"
-                      name="radio"
-                      id="radio1"
-                      value="Get a Quote"
-                    />
-                    <label for="radio">Get a Quote</label>
+                        type="radio"
+                        name="radio"
+                        id="radio1"
+                        value="Get a Quote"
+                      />
+                      <label for="radio">Get a Quote</label>
                     </div>
-
                   </div>
                   <div class="user-name">
                     <label for="name"> Name</label>
-                  <input type="text" placeholder="Name" name="name" id="name"/>
+                    <input
+                      type="text"
+                      placeholder="Name"
+                      name="name"
+                      id="name"
+                    />
                   </div>
                   <div class="user-email">
                     <label for="email">Email</label>
-                  <input type="email" placeholder="Email" name="email" id="email" />
+                    <input
+                      type="email"
+                      placeholder="Email"
+                      name="email"
+                      id="email"
+                    />
                   </div>
                   <div class="user-message">
                     <label for="message">Message</label>
@@ -632,13 +639,58 @@
                   </div>
                   <button class="contact-btn">Send Message</button>
                 </form>
-                </div>
               </div>
-              </section>
-              <!-- contact section end -->
-
+            </div>
+          </section>
+          <!-- contact section end -->
         </main>
       </div>
     </div>
+    <!-- footer start -->
+    <footer class="footer-section">
+      <div class="footer">
+        <div class="footer-manu">
+          <div class="footer-logo">
+            <img src="./assets/images/footer-logo.png" alt="footer logo" />
+          </div>
+          <ul class="footer-menu-list">
+            <li><a href="">About us</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Use Cases</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Blog</a></li>
+          </ul>
+          <div class="footer-social-icons">
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+      </div>
+      <div class="footer-contact">
+        <div class="footer-contact-info">
+          <h4 class="footer-title">Contact us:</h4>
+          <p>Email:info@positivus.com</p>
+          <p>Phone:555-567-8901</p>
+          <div class="footer-address">
+            <p>Address:1234 Main St</p>
+            <p>Moonstone City,Standrust State 12345</p>
+          </div>
+        </div>
+        <div class="footer-subscribe">
+          <input type="email" name="email" placeholder="Email" />
+          <button>Subscribe To News</button>
+        </div>
+        <div class="footer-social-icons">
+          <i class="fab fa-linkedin-in"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>Copyright © 2023 Positivus. All rights reserved.</p>
+        <p><a href="">Privacy Policy</a></p>
+      </div>
+    </footer>
   </body>
 </html>
