--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </section>
           <!-- proposal section end -->
           <!--  case study section start -->
-          <section class="case-study-section">
+          <section class="case-study-section" id="use-cases">
             <div class="service-header case-study-header">
               <h2 class="service-title case-study-title">Case Studies</h2>
               <p class="service-p case-study-p">
@@ -382,7 +382,7 @@
           </section>
           <!-- our working section end -->
           <!-- team section start -->
-          <section class="team-section">
+          <section class="team-section" id="about">
             <div class="service-header team-header">
               <h2 class="service-title team-title">Team</h2>
               <p class="service-p team-p">
@@ -654,9 +654,9 @@
             <img src="./assets/images/footer-logo.png" alt="footer logo" />
           </div>
           <ul class="footer-menu-list">
-            <li><a href="">About us</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Use Cases</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#use-cases">Use Cases</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="">Blog</a></li>
           </ul>
